--- a/Basics/Projects/project1/style.css
+++ b/Basics/Projects/project1/style.css
@@ -34,4 +34,10 @@ html {
   #purple {
     background-color: purple;
   }
+  #orange {
+    background-color: orange;
+  }
+  #green {
+    background-color: green;
+  }
   
